SONAR-11210 Display organization specific ad hoc rule info