@@ -20,7 +20,6 @@
 package org.sonar.server.rule.ws;
 
 import com.google.common.base.Function;
-import com.google.common.collect.FluentIterable;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -32,6 +31,7 @@ import org.sonar.api.resources.Languages;
 import org.sonar.api.server.debt.DebtRemediationFunction;
 import org.sonar.api.server.debt.internal.DefaultDebtRemediationFunction;
 import org.sonar.db.rule.RuleDefinitionDto;
+import org.sonar.db.rule.RuleDto;
 import org.sonar.db.rule.RuleDto.Scope;
 import org.sonar.db.rule.RuleMetadataDto;
 import org.sonar.db.rule.RuleParamDto;
@@ -45,6 +45,7 @@ import org.sonarqube.ws.Rules;
 
 import static java.lang.String.format;
 import static org.sonar.api.utils.DateUtils.formatDateTime;
+import static org.sonar.core.util.stream.MoreCollectors.toList;
 import static org.sonar.server.rule.ws.RulesWsParameters.FIELD_CREATED_AT;
 import static org.sonar.server.rule.ws.RulesWsParameters.FIELD_DEBT_OVERLOADED;
 import static org.sonar.server.rule.ws.RulesWsParameters.FIELD_DEBT_REM_FUNCTION;
@@ -73,7 +74,7 @@ import static org.sonar.server.rule.ws.RulesWsParameters.FIELD_TAGS;
 import static org.sonar.server.rule.ws.RulesWsParameters.FIELD_TEMPLATE_KEY;
 
 /**
- * Conversion of {@link org.sonar.db.rule.RuleDto} to {@link org.sonarqube.ws.Rules.Rule}
+ * Conversion of {@link RuleDto} to {@link Rules.Rule}
  */
 public class RuleMapper {
 
@@ -91,23 +92,23 @@ public class RuleMapper {
     return ruleResponse.build();
   }
 
-  public Rules.Rule toWsRule(RuleDefinitionDto ruleDefinitionDto, SearchResult result, Set<String> fieldsToReturn, RuleMetadataDto metadata, Map<String, UserDto> usersByUuid) {
+  public Rules.Rule toWsRule(RuleDefinitionDto ruleDefinition, SearchResult result, Set<String> fieldsToReturn, RuleMetadataDto metadata, Map<String, UserDto> usersByUuid) {
     Rules.Rule.Builder ruleResponse = Rules.Rule.newBuilder();
-    applyRuleDefinition(ruleResponse, ruleDefinitionDto, result, fieldsToReturn);
-    applyRuleMetadata(ruleResponse, metadata, usersByUuid, fieldsToReturn);
-    setDebtRemediationFunctionFields(ruleResponse, ruleDefinitionDto, metadata, fieldsToReturn);
+    applyRuleDefinition(ruleResponse, ruleDefinition, result, fieldsToReturn);
+    applyRuleMetadata(ruleResponse, ruleDefinition, metadata, usersByUuid, fieldsToReturn);
+    setDebtRemediationFunctionFields(ruleResponse, ruleDefinition, metadata, fieldsToReturn);
     return ruleResponse.build();
   }
 
-  public Rules.Rule.Builder applyRuleDefinition(Rules.Rule.Builder ruleResponse, RuleDefinitionDto ruleDefinitionDto, SearchResult result, Set<String> fieldsToReturn) {
+  private Rules.Rule.Builder applyRuleDefinition(Rules.Rule.Builder ruleResponse, RuleDefinitionDto ruleDefinitionDto, SearchResult result, Set<String> fieldsToReturn) {
 
     // Mandatory fields
     ruleResponse.setKey(ruleDefinitionDto.getKey().toString());
     ruleResponse.setType(Common.RuleType.forNumber(ruleDefinitionDto.getType()));
 
     // Optional fields
-    setRepository(ruleResponse, ruleDefinitionDto, fieldsToReturn);
     setName(ruleResponse, ruleDefinitionDto, fieldsToReturn);
+    setRepository(ruleResponse, ruleDefinitionDto, fieldsToReturn);
     setStatus(ruleResponse, ruleDefinitionDto, fieldsToReturn);
     setSysTags(ruleResponse, ruleDefinitionDto, fieldsToReturn);
     setParams(ruleResponse, ruleDefinitionDto, result, fieldsToReturn);
@@ -126,10 +127,45 @@ public class RuleMapper {
     return ruleResponse;
   }
 
-  private void applyRuleMetadata(Rules.Rule.Builder ruleResponse, RuleMetadataDto metadata, Map<String, UserDto> usersByUuid, Set<String> fieldsToReturn) {
+  private void applyRuleMetadata(Rules.Rule.Builder ruleResponse, RuleDefinitionDto ruleDefinition, RuleMetadataDto metadata, Map<String, UserDto> usersByUuid,
+    Set<String> fieldsToReturn) {
     setTags(ruleResponse, metadata, fieldsToReturn);
     setNotesFields(ruleResponse, metadata, usersByUuid, fieldsToReturn);
     setIsRemediationFunctionOverloaded(ruleResponse, metadata, fieldsToReturn);
+    if (ruleDefinition.isAdHoc()) {
+      setAdHocName(ruleResponse, metadata, fieldsToReturn);
+      setAdHocDescription(ruleResponse, metadata, fieldsToReturn);
+      setAdHocSeverity(ruleResponse, metadata, fieldsToReturn);
+      setAdHocType(ruleResponse, metadata);
+    }
+  }
+
+  private static void setAdHocName(Rules.Rule.Builder ruleResponse, RuleMetadataDto metadata, Set<String> fieldsToReturn) {
+    String adHocName = metadata.getAdHocName();
+    if (adHocName != null && shouldReturnField(fieldsToReturn, FIELD_NAME)) {
+      ruleResponse.setName(adHocName);
+    }
+  }
+
+  private void setAdHocDescription(Rules.Rule.Builder ruleResponse, RuleMetadataDto metadata, Set<String> fieldsToReturn) {
+    String adHocDescription = metadata.getAdHocDescription();
+    if (adHocDescription != null && shouldReturnField(fieldsToReturn, FIELD_HTML_DESCRIPTION)) {
+      ruleResponse.setHtmlDesc(macroInterpreter.interpret(adHocDescription));
+    }
+  }
+
+  private static void setAdHocSeverity(Rules.Rule.Builder ruleResponse, RuleMetadataDto metadata, Set<String> fieldsToReturn) {
+    String severity = metadata.getAdHocSeverity();
+    if (shouldReturnField(fieldsToReturn, FIELD_SEVERITY) && severity != null) {
+      ruleResponse.setSeverity(severity);
+    }
+  }
+
+  private static void setAdHocType(Rules.Rule.Builder ruleResponse, RuleMetadataDto metadata) {
+    Integer ruleType = metadata.getAdHocType();
+    if (ruleType != null) {
+      ruleResponse.setType(Common.RuleType.forNumber(ruleType));
+    }
   }
 
   private static void setRepository(Rules.Rule.Builder ruleResponse, RuleDefinitionDto ruleDto, Set<String> fieldsToReturn) {
@@ -158,10 +194,11 @@ public class RuleMapper {
   }
 
   private static void setEffortToFixDescription(Rules.Rule.Builder ruleResponse, RuleDefinitionDto ruleDto, Set<String> fieldsToReturn) {
+    String gapDescription = ruleDto.getGapDescription();
     if ((shouldReturnField(fieldsToReturn, FIELD_EFFORT_TO_FIX_DESCRIPTION) || shouldReturnField(fieldsToReturn, FIELD_GAP_DESCRIPTION))
-      && ruleDto.getGapDescription() != null) {
-      ruleResponse.setEffortToFixDescription(ruleDto.getGapDescription());
-      ruleResponse.setGapDescription(ruleDto.getGapDescription());
+      && gapDescription != null) {
+      ruleResponse.setEffortToFixDescription(gapDescription);
+      ruleResponse.setGapDescription(gapDescription);
     }
   }
 
@@ -250,9 +287,7 @@ public class RuleMapper {
   private static void setParams(Rules.Rule.Builder ruleResponse, RuleDefinitionDto ruleDto, SearchResult searchResult, Set<String> fieldsToReturn) {
     if (shouldReturnField(fieldsToReturn, FIELD_PARAMS)) {
       List<RuleParamDto> ruleParameters = searchResult.getRuleParamsByRuleId().get(ruleDto.getId());
-      ruleResponse.getParamsBuilder().addAllParams(FluentIterable.from(ruleParameters)
-        .transform(RuleParamDtoToWsRuleParam.INSTANCE)
-        .toList());
+      ruleResponse.getParamsBuilder().addAllParams(ruleParameters.stream().map(RuleParamDtoToWsRuleParam.INSTANCE::apply).collect(toList()));
     }
   }
 
@@ -263,10 +298,11 @@ public class RuleMapper {
   }
 
   private void setDescriptionFields(Rules.Rule.Builder ruleResponse, RuleDefinitionDto ruleDto, Set<String> fieldsToReturn) {
+    String description = ruleDto.getDescription();
     if (shouldReturnField(fieldsToReturn, FIELD_HTML_DESCRIPTION)) {
-      String description = ruleDto.getDescription();
-      if (description != null) {
-        switch (ruleDto.getDescriptionFormat()) {
+      RuleDto.Format descriptionFormat = ruleDto.getDescriptionFormat();
+      if (description != null && descriptionFormat != null) {
+        switch (descriptionFormat) {
           case MARKDOWN:
             ruleResponse.setHtmlDesc(macroInterpreter.interpret(Markdown.convertToHtml(description)));
             break;
@@ -274,13 +310,13 @@ public class RuleMapper {
             ruleResponse.setHtmlDesc(macroInterpreter.interpret(description));
             break;
           default:
-            throw new IllegalStateException(format("Rule description format '%s' is unknown for key '%s'", ruleDto.getDescriptionFormat(), ruleDto.getKey().toString()));
+            throw new IllegalStateException(format("Rule description format '%s' is unknown for key '%s'", descriptionFormat, ruleDto.getKey().toString()));
         }
       }
     }
 
-    if (shouldReturnField(fieldsToReturn, FIELD_MARKDOWN_DESCRIPTION) && ruleDto.getDescription() != null) {
-      ruleResponse.setMdDesc(ruleDto.getDescription());
+    if (shouldReturnField(fieldsToReturn, FIELD_MARKDOWN_DESCRIPTION) && description != null) {
+      ruleResponse.setMdDesc(description);
     }
   }
 
@@ -319,8 +355,8 @@ public class RuleMapper {
   }
 
   private void setLanguageName(Rules.Rule.Builder ruleResponse, RuleDefinitionDto ruleDto, Set<String> fieldsToReturn) {
-    if (shouldReturnField(fieldsToReturn, FIELD_LANGUAGE_NAME) && ruleDto.getLanguage() != null) {
-      String languageKey = ruleDto.getLanguage();
+    String languageKey = ruleDto.getLanguage();
+    if (shouldReturnField(fieldsToReturn, FIELD_LANGUAGE_NAME) && languageKey != null) {
       Language language = languages.get(languageKey);
       ruleResponse.setLangName(language == null ? languageKey : language.getName());
     }
@@ -331,7 +367,7 @@ public class RuleMapper {
       ruleResponse.setIsTemplate(ruleDto.isTemplate());
     }
   }
-  
+
   private static void setIsExternal(Rules.Rule.Builder ruleResponse, RuleDefinitionDto ruleDto, Set<String> fieldsToReturn) {
     if (shouldReturnField(fieldsToReturn, FIELD_IS_EXTERNAL)) {
       ruleResponse.setIsExternal(ruleDto.isExternal());
